--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">마이펫</string>
-    <string name="login" >로그인</string>
+    <string name="login">로그인</string>
     <string name="register">회원가입</string>
     <string name="password">비밀번호</string>
     <string name="email_address">이메일 주소</string>
@@ -12,10 +12,47 @@
     <string name="cd_me">내 정보</string>
     <string name="today_detail">자세히</string>
     <string name="join_date">가입한 날짜</string>
-    <string name="loading">로딩 중...</string>
+    <string name="loading">로딩 중\.\.\.</string>
     <string name="my_likes">좋아요\n한 펫</string>
     <string name="my_posts">내가\n작성한 글</string>
     <string name="logout">로그아웃</string>
+    <string name="add_post">추가하기</string>
+    <string name="my_cats">나의\n고양이</string>
+    <string name="add_photo">사진 추가</string>
+    <string name="name">이름</string>
+    <string name="age">나이</string>
+    <string name="kind">품종</string>
+    <string name="select">선택하기</string>
+    <string name="gender">성별</string>
+    <string name="upload">업로드</string>
+    <string name="owner">주인</string>
 
+    <string-array name="genders">
+        <item>수컷</item>
+        <item>암컷</item>
+    </string-array>
 
+    <string-array name="cat_kinds">
+        <item>샤트룩스</item>
+        <item>코랫</item>
+        <item>재패니즈밥테일</item>
+        <item>터키시반</item>
+        <item>터키시앙고라</item>
+        <item>이그저틱</item>
+        <item>이집션마우</item>
+        <item>자바니즈</item>
+        <item>발리네즈</item>
+        <item>버만</item>
+        <item>랙돌</item>
+        <item>노르웨이숲고양이</item>
+        <item>메인쿤</item>
+        <item>라팜</item>
+        <item>라가머핀</item>
+        <item>시베리아고양이</item>
+        <item>봄베이</item>
+        <item>스코티시폴드</item>
+        <item>러시안블루</item>
+        <item>샴고양이</item>
+        <item>페르시안고양이</item>
+    </string-array>
 </resources>
